# ncovenience

./: Dockerfile  README.md  Taskfile.yml  cloudbuild.yaml  docker-compose.yml  docker-entrypoint.sh  get_latest.py  gunicorn.conf.py  pyproject.toml  requirements.txt  runserver.sh
ncovenience/: app.py  config.py  settings.py  urls.py
ncovenience/blueprints/api/: api.py  data.py  routes.py  serialize.py  utils.py
ncovenience/cache/: cache.py
ncovenience/data/: ageGroup2010.json
proxy/: nginx.conf
web/app/: Dockerfile  package-lock.json  package.json  tsconfig.json
web/app/public/: index.html
web/app/src/: App.css  App.tsx  index.css  index.tsx  react-app-env.d.ts
web/app/src/api/: index.js
web/app/src/components/home/: CasesBarPlot.js  CasesBarPlot.tsx  CasesLinePlot.js  CasesLinePlot.tsx  CounterPanels.js  CounterPanels.tsx  Home.tsx  Map.css  Map.js  Map.tsx  PlotPanels.tsx
web/app/src/components/shared/: Footer.tsx  Loading.tsx  Navbar.tsx
web/app/src/components/utils/: GAUtil.tsx
